@@ -1,4 +1,7 @@
 2010-01-17  Piotr Fusik  <fox@scene.pl>
+* win32/settings_dlg.c, win32/settings_dlg.h, win32/foobar2000/foo_asap.cpp:
+  same code for returning song duration and setting duration for song playback
+
 * win32/foobar2000/foo_asap.cpp, win32/gui.rc, win32/settings_dlg.c,
   win32/settings_dlg.h, win32/Makefile, README, PORTS.xml,
   win32/setup/asap.wxs: upgraded to foobar2000 1.0
